updated cli interface for transision