@@ -3,7 +3,6 @@ package org.intocps.maestro.cli;
 import org.apache.commons.io.IOUtils;
 import org.intocps.maestro.Mabl;
 import org.intocps.maestro.ast.analysis.AnalysisException;
-import org.intocps.maestro.ast.node.ARootDocument;
 import org.intocps.maestro.ast.node.INode;
 import org.intocps.maestro.ast.node.PType;
 import org.intocps.maestro.core.Framework;
@@ -11,13 +10,15 @@ import org.intocps.maestro.core.messages.ErrorReporter;
 import org.intocps.maestro.core.messages.IErrorReporter;
 import org.intocps.maestro.interpreter.*;
 import org.intocps.maestro.template.ScenarioConfiguration;
-import picocli.CommandLine;
 
 import java.io.*;
 import java.lang.reflect.InvocationTargetException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.util.*;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -29,8 +30,7 @@ public class MablCliUtil {
     private final File workingDirectory;
     public boolean verbose;
     public Map.Entry<Boolean, Map<INode, PType>> typeCheckResult;
-    ITTransitionManager tm;
-    MablCliUtilTransfer utilTransfer;
+    ITransitionManager tm;
 
     public MablCliUtil(File workingDirectory, File debugOutputFolder, Mabl.MableSettings settings) {
         this.workingDirectory = workingDirectory;
@@ -106,12 +106,17 @@ public class MablCliUtil {
 
     public void interpret() throws Exception {
         InputStream config = IOUtils.toInputStream(mabl.getRuntimeDataAsJsonString(), StandardCharsets.UTF_8);
-        new MableInterpreter(new DefaultExternalValueFactory(workingDirectory, config), tm).execute(mabl.getMainSimulationUnit());
+        new MableInterpreter(createValueFactory(workingDirectory, config), tm).execute(mabl.getMainSimulationUnit());
     }
 
     public void interpret(File config) throws Exception {
         InputStream c = new FileInputStream(config);
-        new MableInterpreter(new DefaultExternalValueFactory(workingDirectory, c), tm).execute(mabl.getMainSimulationUnit());
+        new MableInterpreter(createValueFactory(workingDirectory, c), tm).execute(mabl.getMainSimulationUnit());
+    }
+
+    private DefaultExternalValueFactory createValueFactory(File workingDirectory,
+            InputStream c) throws IOException, NoSuchMethodException, IllegalAccessException, InvocationTargetException, InstantiationException {
+        return new DefaultExternalValueFactory(workingDirectory, c);
     }
 
     public boolean generateSpec(ScenarioConfiguration scenarioConfiguration) throws Exception {
@@ -120,54 +125,27 @@ public class MablCliUtil {
     }
 
     public void setTransitionPath(Path transitionPath) {
-        Mabl.MableSettings settings = new Mabl.MableSettings();
-        settings.dumpIntermediateSpecs = false;
-        settings.preserveFrameworkAnnotations = true;
-        settings.inlineFrameworkConfig = false;
-        utilTransfer = new MablCliUtilTransfer(transitionPath.toFile(), transitionPath.toFile(), settings);
-        utilTransfer.setVerbose(true);
-        File transitionSpec = transitionPath.resolve("spec.mabl").toFile();
 
-        ITTransitionManager.ISpecificationProvider specificationProvider = new ITTransitionManager.ISpecificationProvider() {
-            final Map<String, ARootDocument> candidates = new HashMap<>();
-            final Set<String> removedCandidates = new HashSet<>();
-
-            @Override
-            public Map<String, ARootDocument> get() {
-                if (transitionSpec.exists() && !removedCandidates.contains(transitionSpec.getAbsolutePath())) {
-                    try {
-                        utilTransfer.parse(Arrays.asList(transitionSpec));
-                    } catch (Exception e) {
-                        e.printStackTrace();
-                    }
-                    candidates.put(transitionSpec.getAbsolutePath(), utilTransfer.getMainSimulationUnit());
+        ITransitionManager.ISpecificationProvider specificationProvider = new DirectorySpecificationProvider(transitionPath.toFile(), (f) -> {
+            Mabl m = new Mabl(f.getParentFile(), f.getParentFile(), mabl.getSettings());
+            try {
+                m.parse(List.of(f));
+                Map.Entry<Boolean, Map<INode, PType>> res = m.typeCheck();
+                if (!res.getKey()) {
+                    return null;
                 }
-                return candidates;
+                return m.getMainSimulationUnit();
+            } catch (Exception e) {
+                throw new RuntimeException(e);
             }
+        });
 
-            @Override
-            public Map<String, ARootDocument> get(String name) {
-                return get();
-            }
-
-            @Override
-            public void remove(ARootDocument specification) {
-                candidates.entrySet().stream().filter(map -> map.getValue().equals(specification)).map(Map.Entry::getKey).findFirst()
-                        .ifPresent(key -> {candidates.remove(key); removedCandidates.add(key);});
-            }
-        };
-
-        tm = new TransitionManager() {
-            @Override
-            public ISpecificationProvider getSpecificationProvider() {
-                return specificationProvider;
-            }
+        tm = new TransitionManager(specificationProvider) {
 
             @Override
             public void transfer(Interpreter interpreter, ITTransitionInfo info) throws AnalysisException {
                 try {
-                    InputStream config = IOUtils.toInputStream(mabl.getRuntimeDataAsJsonString(), StandardCharsets.UTF_8);
-                    super.transfer(new Interpreter(new DefaultExternalValueFactory(transitionPath.toFile(), config), this), info);
+                    super.transfer(new Interpreter(interpreter.getLoadFactory().changeWorkingDirectory(info.workingDirectory(), null), this), info);
                 } catch (Exception e) {
                     e.printStackTrace();
                 }
@@ -175,13 +153,5 @@ public class MablCliUtil {
         };
     }
 
-    class MablCliUtilTransfer extends MablCliUtil {
-        public MablCliUtilTransfer(File workingDirectory, File debugOutputFolder, Mabl.MableSettings settings) {
-            super(workingDirectory, debugOutputFolder, settings);
-        }
 
-        public ARootDocument getMainSimulationUnit() {
-            return super.mabl.getMainSimulationUnit();
-        }
-    }
 }
